# dobivorn-portscanner

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  portscanner.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_portscanner.py
